# blackwell_mega_kernel

./: .gitignore  CMakeLists.txt  README.md  trace.json  trace_l1l2.json
common/include/mega/: profiler.cuh
common/python/mega_common/: __init__.py
common/tools/: decode_prof.py  export_perfetto.py
docs/: profiling.md
kernels/mega_moe/: CMakeLists.txt  README.md  build_ffi.sh
kernels/mega_moe/bindings/: mega_moe_ffi.cu
kernels/mega_moe/include/mega_moe/: events.h  mega_moe.h  shapes.h  workspace.h
kernels/mega_moe/python/mega_moe/: __init__.py
kernels/mega_moe/src/csrc/apis/: mega.hpp
kernels/mega_moe/tests/: reference_cpu.cc  reference_cpu.h  test_e2e.py  test_layout.cu
